--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,32 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'IBM Plex Sans', sans-serif;
-  }
+*,
+*::after,
+*::before {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 
-  :root {
-    --red: #FF0404;
-    --black: #121212;
-  }
-  
-  .App {
-    height: 100%;
-    width: auto;
-  }
+:root {
+  --red: #ff0404;
+  --black: #121212;
+}
 
+body {
+  font-family: "IBM Plex Sans", sans-serif;
+  font-size: 16px;
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
+button,
+input[type="button"],
+input[type="reset"],
+input[type="submit"] {
+  cursor: pointer;
+  -webkit-appearance: none;
+}
+
+img {
+  height: auto;
+  max-width: 100%;
+}
