--- a/src/Components/UI/Header/Header.css
+++ b/src/Components/UI/Header/Header.css
@@ -1,4 +1,4 @@
-.header-container {
+.header__container {
   display: flex;
   padding: 1rem;
   justify-content: space-between;
@@ -8,7 +8,7 @@
 }
 
 @media (max-width: 700px) {
-  .header-container {
+  .header__container {
     flex-direction: column;
     align-items: flex-start;
     gap: 1rem;
